# HTTP-Server

./: .gitignore  CMakeLists.txt  README.md
html/: 404.html  index.html  info.html
inc/: data.h  header.h  request.h  response.h  server.h  throw_exception.hpp
src/: CMakeLists.txt  data.cpp  header.cpp  main-client.cpp  main.cpp  request.cpp  response.cpp  server.cpp
